# Proyecto-Datos-2-Yerik-Jaslin-Raymond-Araya

./: CMakeLists.txt  library.cpp  library.h  memtracker.cpp  memtracker.h
Test/: test_main.cpp
gui/: main.cpp  mainwindow.cpp  mainwindow.h
